src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-color: #000000; /* Text color in light and dark mode */
  --background-color: #f3f4f6; /* Background color in light mode */
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-color: #000000; /* Text color in dark mode */
    --background-color: #101827; /* Background color in dark mode */
  }
}

body {
  color: var(--foreground-color);
  background-color: var(--background-color);
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* main {
  padding-top: 60px;
} */

.dark body {
  color: #000000;
  background-color: #101827;
}

.leaflet-container {
  width: 100% !important;
  height: 400px !important;
}

